--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
-    <title>Hello, Love!</title>
+    <title>Happy Valentines Day!</title>
   </head>
   <body>
-    
+
     <audio id="backgroundMusic" autoplay loop> 
         <source src="up.mp3" type="audio/mpeg" />
       </audio>
